# Qt_Academy_Project

./: CMakeLists.txt  CMakeLists.txt.user.77d4341  CMakeLists.txt.user.eb26990  README.md
Qcanvase/: CMakeLists.txt
Qcanvase/interfaces/: CustomItem.qml  main.qml
Qcanvase/interfaces/components/: MyPin.qml
Qcomment/: CMakeLists.txt  CommentSystem.qmlproject  CommentSystem.qmlproject.qtds  CommentSystem.qmlproject.qtds.c279850  README.md  qmlmodules
Qcomment/content/: App.qml
Qcomment/imports/: CMakeLists.txt
Qcomment/imports/CommentSystem/: CMakeLists.txt  Constants.qml  qmldir
Qcomment/imports/CommentSystem/designer/: plugin.metainfo
Qcomment/src/: import_qml_plugins.h
Qpin/interfaces/: main.qml
Qpin/interfaces/components/: MyPin.qml
android/gradle/: ._wrapper
android/gradle/wrapper/: ._gradle-wrapper.properties
android/res/: ._values  ._xml
android/res/values/: ._libs.xml
android/res/xml/: ._qtprovider_paths.xml
android/src/org/qtproject/example/QGuiApp/: debug.java
components/: QtAcademy_Project_specifications.mdj
interfaces/: CanvasPage.qml  CommentCumponent.qml  CommentPage.qml  LoginPage.qml  MyPin.qml  MyTabBar.qml  NavBar.qml  ReplyCumponent.qml  ZoomTest.qml.q  main.qml
interfaces/components/: CommentDelegate.qml  CommentModel.js  MyComment.qml  MyPin.qml  ReplyDelegate.qml
notifications/: notification.qml
src/: main.cpp
